# PyPhysics

./: MANIFEST.in  README.md  pyproject.toml  thisPyPhysics.sh
src/pyphysics/: __init__.py  actroot.mplstyle  actroot_interface.py  barager.py  bernstein.py  cross_section.py  energy_loss.py  fitting.py  kinematics.py  particle.py  root_interface.py  styling.py  theory.py  utils.py
